<resources>
    <string name="app_name">ShareStudent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeText">welcome</string>
    <string name="example_gmail_com">exemple@gmail.com</string>
    <string name="matricule">Matricule : G54490</string>
    <string name="name">Nom : Fouefack Atchepong</string>
    <string name="firstName">Prénom : Vivace Jibrice</string>
    <string name="connexion">connection</string>
    <string name="valideToastText">valid address</string>
    <string name="invalideToastText">invalid address</string>
    <string name="insertToastText">add new user</string>
    <string name="updateToastText">update user</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="homeName">share student</string>
    <string name="password">mot de passe</string>
    <string name="register">s\'inscrire</string>
    <string name="connexionText">se connecter</string>
    <string name="loginPage">Login</string>
    <string name="registerPage">Register</string>
    <string name="confirm_passwordText">confirmation</string>
    <string name="createPub">create a post</string>
    <string name="d_connexion">logout</string>
    <string name="publications">publications</string>
    <string name="profil">profile</string>
    <string name="retail">retail</string>
    <string name="add_publication">add publication</string>
    <string name="textAjoutObjet">Ajouter une image de l\'objet</string>
    <string name="publier">publier</string>
    <string name="gallery">galerie</string>
    <string name="camera">camera</string>
    <string name="descriptionText">description</string>
    <string name="titreText">titre</string>
    <string name="aboutText">\n \n \n  Matricule : 54490 \n \n \n \n Nom : Fouefack Atchepong \n \n \n \n  Prénom : Vivace Jibrice \n</string>
    <string name="writeToAuthor">écrire à l\'auteur</string>
    <string name="delete">supprimer</string>
    <string name="returne">retour</string>
    <string name="invalid">invalide</string>
    <string name="dataName">data</string>
    <string name="errorGetImage">error to get image from firebase</string>
    <string name="connexionError">erreur de connexion</string>
    <string name="onFailure">on failure</string>
    <string name="wrongPass">wrong password</string>
    <string name="newUser">utilisateur créer</string>
    <string name="noDelete">suppression annulée</string>
    <string name="confirmationTitle">Confirmation de la suppression</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="mailto">mailto:</string>
    <string name="type">text/plain</string>
    <string name="google">com.google.android.gm</string>
    <string name="deleteMessage">Êtes-vous sûr de vouloir supprimer cette publication ?</string>
    <string name="errorToSend">erreur d\'envoi</string>
    <string name="message">je suis interessé par  la publication,est ce qu\'elle est toujours disponible?</string>
    <string name="drawer">drawer</string>
    <string name="mes_publicationsText">mes publications :</string>
    <string name="logout">se déconnecter</string>
    <string name="sh_re_student"> Sh     re Student</string>
    <string name="filter">filtre</string>
    <string name="onFailureCreatePublication">échec de création</string>
    <string name="onFailureReadData">échec de lecture</string>
    <string name="onFailureDeleteElementById">échec de suppression</string>
</resources>