<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/about"
        android:title="@string/about" />
    <item
        android:id="@+id/messages"
        android:icon="@drawable/message"
        android:title="@string/messageries" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/account"
        android:title="@string/profil" />

    <item
        android:id="@+id/publications"
        android:icon="@drawable/publication"
        android:title="@string/publications" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/d_connexion" />


</menu>