<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addViewModel"
            type="g54490.mobg5.sharestudent.viewmodel.AddViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/font2"
        android:contentDescription="@string/welcomeText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="g54490.mobg5.sharestudent.view.LoginActivity">

            <Button
                android:id="@+id/buttonPublier"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/purple_700"
                android:onClick="@{() -> addViewModel.checkDataAndCreatePublication()}"
                android:text="@string/publier"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textAjoutObjet"
                android:layout_width="282dp"
                android:layout_height="27dp"
                android:text="@string/textAjoutObjet"
                android:textColor="#0E0E0E"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAjoutObjet">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titreText"
                    android:onTextChanged="@{addViewModel::titleText}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descriptionText"
                    android:onTextChanged="@{addViewModel::descriptionText}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="409dp"
                android:layout_height="323dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gallery"
                android:onClick="@{() -> addViewModel.setGalleryPress()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:text="@string/camera"
                android:onClick="@{() -> addViewModel.setCameraPress()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/galleryButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>