<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="g54490.mobg5.sharestudent.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AboutFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/matricule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="24dp"
            android:text="@string/matricule"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size24"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="@dimen/size24"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/size24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matricule" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size24"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="@dimen/size24"
            android:text="@string/firstName"
            android:textColor="@color/black"
            android:textSize="@dimen/size24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>