<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/font2"
        tools:context="g54490.mobg5.sharestudent.connection.Register">


        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size24"
            android:layout_marginTop="60dp"
            android:layout_marginRight="@dimen/size24"
            android:text="@string/registerPage"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />


        <EditText
            android:id="@+id/emailInputEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size24"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="@dimen/size24"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/example_gmail_com"
            android:drawableStart="@drawable/baseline_email_24"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTv"
            tools:ignore="SpUsage,TextContrastCheck" />


        <EditText
            android:id="@+id/passwordInputEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/baseline_lock_24"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputEt"
            tools:ignore="SpeakableTextPresentCheck" />


        <EditText
            android:id="@+id/confirmPasswordInputEt"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_passwordText"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/baseline_lock_24"
            android:textSize="@dimen/size24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputEt"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/registerBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="24dp"
            android:background="@color/purple_700"
            android:text="@string/register"
            android:textColor="#CFD8DC"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputEt"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="53dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:elevation="10dp"
            android:shadowColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>